# ARC-BUILDER

./: .env.local  AUTHENTICATION_FIX_GUIDE.md  AUTHENTICATION_SETUP.md  DEPLOYMENT.md  INTEGRATION_STATUS.md  PROJECT_SUMMARY.md  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  setup.bat  start-dev.bat  start-dev.sh  start-simple.bat  test_backend.py  vercel.json
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page-old.tsx  page.tsx
app/auth/: page.tsx
app/chat/: page.tsx
app/dashboard/: page.tsx
app/generator/: page.tsx
app/integrations/: page.tsx
backend/: .env.local  README.md  auth.py  main.py  pyproject.toml  start.bat  test_startup.py
backend/agent/: graph.py
backend/app builder/: api_server.py  pyproject.toml  start_server.py
backend/app builder/agent/: graph.py  tools.py
backend/app builder/generated_project/: next.config.js  package.json  tailwind.config.js  tsconfig.json
backend/app builder/generated_project/prisma/: schema.prisma
backend/arc_builder_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
components/: backend-status.tsx  chat-interface.tsx  dashboard-content.tsx  error-boundary.tsx  footer.tsx  header.tsx  lazy-image.tsx  lazy-wrapper.tsx  loading-spinner.tsx  particle-system.tsx  premium-footer.tsx  premium-loading.tsx  premium-navigation.tsx  templates-content.tsx  theme-toggle.tsx  website-builder.tsx
contexts/: auth-context.tsx
lib/: api-service.ts  backend-api.ts
scripts/: 002_create_projects.sql  003_create_integrations.sql  004_create_profile_trigger.sql
(+11 files in other folders)
